Frontend - Cadastrar, Editar Responsavel

--- a/App/Views/site/ocorrencia-responsavel-vitima-cadastrar.html
+++ b/App/Views/site/ocorrencia-responsavel-vitima-cadastrar.html
@@ -1,11 +1,11 @@
-<?php if(!class_exists('Rain\Tpl')){exit;}?><!-- Content Wrapper. Contains page content -->
+<!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
-    <h1>Detalhe da Ocorrência - Editar Responsável</h1>
+    <h1>Detalhe da Ocorrência - Novo Responsável</h1>
     <ol class="breadcrumb">
       <li><a href="/"><i class="fa fa-dashboard"></i> Inicio</a></li>
-      <li class="active">Detalhe da Ocorrência - Editar Responsável</li>
+      <li class="active">Detalhe da Ocorrência - Novo Responsável</li>
     </ol>
   </section>
 
@@ -14,11 +14,11 @@
 
     <div class="row">
       <div class="col-md-12">
-        <?php if( $error != '' ){ ?>
+        {if="$error != ''"}
         <div class="alert alert-danger">
-          <?php echo htmlspecialchars( $error, ENT_COMPAT, 'UTF-8', FALSE ); ?>
+          {$error}
         </div>
-        <?php } ?>
+        {/if}
       </div>
     </div>
 
@@ -29,7 +29,7 @@
       </div>
       <!-- /.box-header -->
       <div class="box-body">
-        <form action="/ocorrencia-responsavel-vitima-editar/<?php echo htmlspecialchars( $vitima["0"]["idVitimasApuracao"], ENT_COMPAT, 'UTF-8', FALSE ); ?>/<?php echo htmlspecialchars( $vitima["0"]["idOcorrencia"], ENT_COMPAT, 'UTF-8', FALSE ); ?>/<?php echo htmlspecialchars( $vitima["0"]["idPessoaVitima"], ENT_COMPAT, 'UTF-8', FALSE ); ?>" method="post">
+        <form action="/ocorrencia-responsavel-vitima-cadastrar/{idVitima}/{idOcorrencia}" method="post">
 
           <!--Row-->
           <div class="row">
@@ -37,7 +37,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="id-nome-responsavel">Nome Completo *</label>
-                <input type="text" name="nomeResponsavel" id="id-nome-responsavel" class="form-control" placeholder="Digite o nome aqui" maxlength="70" onkeyup="validarCaracter(this, 1)" value="<?php echo htmlspecialchars( $vitima["0"]["nomeResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>" required>
+                <input type="text" name="nomeResponsavel" id="id-nome-responsavel" class="form-control" placeholder="Digite o nome aqui" maxlength="70" onkeyup="validarCaracter(this, 1)" required>
               </div>
             </div>
             <!--Fim Nome do vitima-->
@@ -45,8 +45,7 @@
             <!--Inicio Radio-->
             <div class="col-md-3">
               <div class="form-group">
-                <input type="hidden" name="idResponsavelApuracao" value="<?php echo htmlspecialchars( $vitima["0"]["idResponsavelApuracao"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
-                <input type="hidden" id="id-radio-pais-hidden-responsavel" value="<?php echo htmlspecialchars( $vitima["0"]["isPais"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="hidden" id="id-radio-pais-hidden-responsavel">
                 <label>O que o responsavel é da Vítima?</label><br>
                 <label class="container-radio">Pai
                   <input type="radio" name="responsavelRadio" id="id-responsavel-pai" class="minimal" value="1">
@@ -81,7 +80,7 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label for="id-cpf-responsavel">CPF *</label>
-                <input type="text" name="cpfResponsavel" id="id-cpf-responsavel" class="form-control" placeholder="___.___.___-__" value="<?php echo htmlspecialchars( $vitima["0"]["cpfResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>" required>
+                <input type="text" name="cpfResponsavel" id="id-cpf-responsavel" class="form-control" placeholder="___.___.___-__" required>
               </div>
             </div>
             <!--Fim CPF-->
@@ -90,7 +89,7 @@
             <div class="col-md-2">
               <div class="form-group">
                 <label for="id-rg-responsavel">RG</label>
-                <input type="text" name="rgResponsavel" id="id-rg-responsavel" class="form-control" placeholder="__.___.___" onblur="digitoRg()" value="<?php echo htmlspecialchars( $vitima["0"]["rgResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="rgResponsavel" id="id-rg-responsavel" class="form-control" placeholder="__.___.___" onblur="digitoRg()">
               </div>
             </div>
             <!--Fim RG-->
@@ -99,7 +98,7 @@
             <div class="col-md-1 divBordaVermelhaVerde">
               <div class="form-group">
                 <label for="id-rg-digito-responsavel">Digito</label>
-                <input type="text" name="rgDigitoResponsavel" id="id-rg-digito-responsavel" class="form-control" maxlength="1" onblur="digitoRg()" onkeyup="validarCaracter(this, 2)" value="<?php echo htmlspecialchars( $vitima["0"]["rgResponsavelDigito"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="rgDigitoResponsavel" id="id-rg-digito-responsavel" class="form-control" maxlength="1" onblur="digitoRg()" onkeyup="validarCaracter(this, 2)">
               </div>
             </div>
             <!--Fim RG digito verificador-->
@@ -112,7 +111,7 @@
                     <div class="input-group-addon">
                       <i class="fa fa-calendar"></i>
                     </div>
-                    <input type="text" name="dataNascResponsavel" id="id-data-nasc-responsavel" class="form-control" placeholder="__/__/____" value="<?php echo htmlspecialchars( $vitima["0"]["dataNascResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                    <input type="text" name="dataNascResponsavel" id="id-data-nasc-responsavel" class="form-control" placeholder="__/__/____">
                   </div>
                 </div>
               </div>
@@ -121,7 +120,6 @@
               <!--Sexo-->
               <div class="col-md-3">
                 <div class="form-group">
-                  <input type="hidden" id="id-sexo-hidden-responsavel" value="<?php echo htmlspecialchars( $vitima["0"]["sexoResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
                   <label for="id-sexo-responsavel">Sexo</label>
                   <select class="form-control select2" name="sexoResponsavel" id="id-sexo-responsavel">
                     <option value="m">Masculino</option>
@@ -139,7 +137,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label for="id-email-responsavel">E-mail</label>
-                <input type="email" name="emailResponsavel" id="id-email-responsavel" class="form-control" placeholder="Digite o e-mail aqui" maxlength="100" value="<?php echo htmlspecialchars( $vitima["0"]["emailResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="email" name="emailResponsavel" id="id-email-responsavel" class="form-control" placeholder="Digite o e-mail aqui" maxlength="100">
               </div>
             </div>
             <!--Fim Email-->
@@ -148,7 +146,7 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label for="id-telfixo-responsavel">Telefone Fixo</label>
-                <input type="text" name="telFixoResponsavel" id="id-telfixo-responsavel" class="form-control" placeholder="____-____" value="<?php echo htmlspecialchars( $vitima["0"]["fixoResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="telFixoResponsavel" id="id-telfixo-responsavel" class="form-control" placeholder="____-____">
               </div>
             </div>
             <!--Telefone Fixo vitima-->
@@ -157,7 +155,7 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label for="id-celular-responsavel">Celular</label>
-                <input type="text" name="celularResponsavel" id="id-celular-responsavel" class="form-control" placeholder="_____-____" value="<?php echo htmlspecialchars( $vitima["0"]["celularResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="celularResponsavel" id="id-celular-responsavel" class="form-control" placeholder="_____-____">
               </div>
             </div>
             <!--Fim Celular vitima-->
@@ -179,7 +177,7 @@
             <div class="col-md-2">
               <div class="form-group">
                 <label for="id-cep-responsavel">CEP</label>
-                <input type="text" name="cepResponsavel" id="id-cep-responsavel" class="form-control" placeholder="_____-___" value="<?php echo htmlspecialchars( $vitima["0"]["cepResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="cepResponsavel" id="id-cep-responsavel" class="form-control" placeholder="_____-___">
               </div>
             </div>
             <!--Fim Numero cep-->
@@ -188,7 +186,7 @@
             <div class="col-md-5">
               <div class="form-group">
                 <label for="id-rua-responsavel">Rua</label>
-                <input type="text" name="ruaResponsavel" id="id-rua-responsavel" class="form-control" placeholder="Digite o nome da rua da vitima" maxlength="100" onkeyup="validarCaracter(this, 3)" value="<?php echo htmlspecialchars( $vitima["0"]["ruaResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="ruaResponsavel" id="id-rua-responsavel" class="form-control" placeholder="Digite o nome da rua da vitima" maxlength="100" onkeyup="validarCaracter(this, 3)">
               </div>
             </div>
             <!--Fim Rua vitima-->
@@ -197,7 +195,7 @@
             <div class="col-md-5">
               <div class="form-group">
                 <label for="id-bairro-responsavel">Bairro</label>
-                <input type="text" name="bairroResponsavel" id="id-bairro-responsavel" class="form-control" placeholder="Digite o nome do bairro da vitima" maxlength="100" onkeyup="validarCaracter(this, 3)" value="<?php echo htmlspecialchars( $vitima["0"]["bairroResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="bairroResponsavel" id="id-bairro-responsavel" class="form-control" placeholder="Digite o nome do bairro da vitima" maxlength="100" onkeyup="validarCaracter(this, 3)">
               </div>
             </div>
             <!--Fim Bairro vitima-->
@@ -210,7 +208,7 @@
             <div class="col-md-2">
               <div class="form-group">
                 <label for="id-numero-responsavel">Numero</label>
-                <input type="number" name="numeroResponsavel" id="id-numero-responsavel" class="form-control" placeholder="Numero da casa" min="0" value="<?php echo htmlspecialchars( $vitima["0"]["numeroResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="number" name="numeroResponsavel" id="id-numero-responsavel" class="form-control" placeholder="Numero da casa" min="0">
               </div>
             </div>
             <!--Fim Numero vitima--> 
@@ -218,7 +216,6 @@
             <!--Estado vitima-->
             <div class="col-md-3">
               <div class="form-group">
-                <input type="hidden" id="id-estado-hidden-responsavel" value="<?php echo htmlspecialchars( $vitima["0"]["estadoResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
                 <label for="id-estado-responsavel">Estado</label>
                 <select class="form-control select2" name="estadoResponsavel" id="id-estado-responsavel">
                   <option value="ac">Acre</option>
@@ -257,7 +254,7 @@
             <div class="col-md-3">
               <div class="form-group">
                 <label for="id-cidade-responsavel">Cidade</label>
-                <input type="text" name="cidadeResponsavel" id="id-cidade-responsavel" class="form-control" placeholder="Cidade" onkeyup="validarCaracter(this, 1)" value="<?php echo htmlspecialchars( $vitima["0"]["cidadeResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="cidadeResponsavel" id="id-cidade-responsavel" class="form-control" placeholder="Cidade" onkeyup="validarCaracter(this, 1)">
               </div>
             </div>
             <!--Fim Cidade vitima-->
@@ -266,7 +263,7 @@
             <div class="col-md-4">
               <div class="form-group">
                 <label for="id-complemento-responsavel">Complemento</label>
-                <input type="text" name="complementoResponsavel" id="id-complemento-responsavel" class="form-control" placeholder="Complemento" maxlength="100" onkeyup="validarCaracter(this, 3)" value="<?php echo htmlspecialchars( $vitima["0"]["complementoResponsavel"], ENT_COMPAT, 'UTF-8', FALSE ); ?>">
+                <input type="text" name="complementoResponsavel" id="id-complemento-responsavel" class="form-control" placeholder="Complemento" maxlength="100" onkeyup="validarCaracter(this, 3)">
               </div>
             </div>
             <!--Fim Complemento vitima-->
@@ -276,8 +273,7 @@
           <!--Inicio Row-->
           <div class="row">
             <div class="col-md-12">
-              <input type="submit" class="btn btn-primary pull-right margin" id="botaoEnviar" value="Editar">
-              <a href="/ocorrencia-responsavel-vitima-lista/<?php echo htmlspecialchars( $vitima["0"]["idVitimasApuracao"], ENT_COMPAT, 'UTF-8', FALSE ); ?>/<?php echo htmlspecialchars( $vitima["0"]["idOcorrencia"], ENT_COMPAT, 'UTF-8', FALSE ); ?>" class="btn btn-primary pull-left margin">Voltar</a>
+              <input type="submit" class="btn btn-primary pull-right margin" id="botaoEnviar" value="Salvar">
             </div>            
           </div>
           <!--Fim Row-->
@@ -300,15 +296,6 @@ var labelOutro = document.getElementById('id-responsavel-label-outro');
 
 window.onload = function()
 {
-  let sexoHiddenResponsavel = document.getElementById("id-sexo-hidden-responsavel").value;
-  let estadoHiddenResposanvel = document.getElementById("id-estado-hidden-responsavel").value;
-
-  estadoHiddenResposanvel = estadoHiddenResposanvel.toLowerCase();
-
-  let sexoResponsavel = document.getElementById("id-sexo-responsavel").value = sexoHiddenResponsavel;  
-  let estadoResponsavel = document.getElementById("id-estado-responsavel").value = estadoHiddenResposanvel;
-  //////////////////////////////////////////////////////////////////////////////////////////////  
-
   let radioResponsavel = document.getElementById('id-radio-pais-hidden-responsavel').value;
   let responsavelPai = document.getElementById('id-responsavel-pai');
   let responsavelMae = document.getElementById('id-responsavel-mae');
@@ -338,6 +325,9 @@ window.onload = function()
   responsavelMae.onclick = mostra2;
 
   responsavelOutro.onclick = mostra3;
+
+  inputOutro.classList.add("escondido");
+  labelOutro.classList.add("escondido");
 }
 
 function digitoRg()
