Backend - Cadastrar Responsavel Ocorrencia

--- a/App/Views/site/ocorrencia-responsavel-vitima-cadastrar.html
+++ b/App/Views/site/ocorrencia-responsavel-vitima-cadastrar.html
@@ -29,7 +29,7 @@
       </div>
       <!-- /.box-header -->
       <div class="box-body">
-        <form action="/ocorrencia-responsavel-vitima-cadastrar/{idVitima}/{idOcorrencia}" method="post">
+        <form action="/ocorrencia-responsavel-vitima-cadastrar/{$idVitima}/{$idOcorrencia}" method="post">
 
           <!--Row-->
           <div class="row">
