--- a/App/Views/site/ocorrencia-responsavel-vitima-lista.html
+++ b/App/Views/site/ocorrencia-responsavel-vitima-lista.html
@@ -46,8 +46,8 @@
             <td>{$value.cpfResponsavel}</td>
             <td>
               <a href="/ocorrencia-responsavel-vitima-detalhe/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}" class="btn btn-default"><i class="fa fa-bars"></i></a>
-              <a href="/ocorrencia-responsavel-vitima-editar/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-primary"><i class="fa fa-edit"></i></a>
-              <a href="#" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+              <a href="/ocorrencia-responsavel-vitima-editar/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}" class="btn btn-primary"><i class="fa fa-edit"></i></a>
+              <a href="/ocorrencia-responsavel-vitima-excluir/{$value.idVitimasApuracao}/{$value.idOcorrencia}/{$value.idPessoaResponsavel}" class="btn btn-danger"><i class="fa fa-trash"></i></a>
             </td>
           </tr>
           {/if}
