--- a/App/Views/site/ocorrencia-vitimas.html
+++ b/App/Views/site/ocorrencia-vitimas.html
@@ -80,9 +80,9 @@
 
             <a href="/ocorrencia-responsavel-vitima-lista/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-app"><i class="fa fa-user"></i>Editar Responsavel</a>
 
-            <a href="/ocorrencia-vitima-ver-arquivo" class="btn btn-app"><i class="fa fa-file-pdf-o"></i>Envio de Documentos</a>
+            <a href="/ocorrencia-vitima-enviar-arquivo-lista/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-app"><i class="fa fa-file-pdf-o"></i>Envio de Documentos</a>
 
-            <a href="/ocorrencia-vitima-ver-arquivo" class="btn btn-app"><i class="fa fa-eye"></i>Acompanhamento</a>
+            <a href="/ocorrencia-vitima-acompanhamento/{$value.idVitimasApuracao}/{$value.idOcorrencia}" class="btn btn-app"><i class="fa fa-eye"></i>Acompanhamento</a>
 
             {/if}
             {/loop}
