Seleciona Pessoa - Cadastrar Arquivo Vitima Ocorrencia

--- a/App/Views/site/ocorrencia-vitima-enviar-arquivo-cadastrar.html
+++ b/App/Views/site/ocorrencia-vitima-enviar-arquivo-cadastrar.html
@@ -23,11 +23,12 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
-              <input type="hidden" id="id-selecione-pessoa-hidden" value="">
               <label for="id-selecione-pessoa">Selecione a pessoa</label>
               <select class="form-control select2" name="selecionePessoa" id="id-selecione-pessoa">
                 <option checked>--- Selecione uma pessoa ---</option>
-                <option value="">Pessoa 1</option>
+                {loop="$selecionaPessoa"}
+                <option value="{$value.id}">{$value.nome}</option>
+                {/loop}
               </select>
             </div>
           </div>
